--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,6 +7,25 @@ on:
     types: published
 
 jobs:
+  create_release:
+    runs-on: ubuntu-18.04
+    steps:
+    - name: Create release
+      if: github.event_name != 'pull_request'
+      uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: true
+        title: "Development Build"
+    
+    - name: Create tagged release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: "ncipollo/release-action@v1"
+      with:
+        prerelease: false
+        token: "${{ secrets.GITHUB_TOKEN }}"
+         
   build_thyme_msvc:
     runs-on: windows-2019
     strategy:
@@ -15,14 +34,18 @@ jobs:
         platform: [x86, amd64]
         exclude:
           - {standalone: "OFF", platform: amd64}
+          
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: 'recursive'     
+        submodules: 'recursive'   
+        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
+        
     - uses: ilammy/msvc-dev-cmd@v1.4.1
       with:
         arch: ${{ matrix.platform }}
-      
+    
     - name: Install dependencies
       shell: bash
       run: |
@@ -38,6 +61,7 @@ jobs:
 
     - name: Create archives
       shell: bash
+      id: mkarc
       run: |
         mkdir artifact
         export ZIPNAME=thyme_${{ matrix.platform }}
@@ -45,9 +69,22 @@ jobs:
         7z a artifact/$ZIPNAME$FEATURES.zip ./build/thyme.$EXTENSION
         if [ ${{ matrix.standalone }} != "ON" ]; then 7z a artifact/$ZIPNAME$FEATURES.zip ./build/launchthyme.exe; else 7z a artifact/$ZIPNAME$FEATURES.zip ./build/thymecrashhandler.exe; fi
         if [ Release == "Debug" ]; then 7z a artifact/$ZIPNAME$FEATURES.zip ./build/thyme.pdb; fi
+        echo "::set-output name=zip_name::$ZIPNAME$FEATURES.zip"
         
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
         name: thyme
         path: artifact
+        
+    - name: Upload release
+      if: github.event_name != 'pull_request'
+      uses: softprops/action-gh-release@v1
+      with:
+        name: Development Build
+        tag_name: "latest"
+        prerelease: true
+        files: |
+          artifact\*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
