Implements basic SequentialScript.
Implements ctor/dtor, class layout and wrapper virtuals.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -191,6 +191,7 @@ set(GAMEENGINE_SRC
     game/logic/scriptengine/scriptgroup.cpp
     game/logic/scriptengine/scriptlist.cpp
     game/logic/scriptengine/scriptparam.cpp
+    game/logic/scriptengine/sequentialscript.cpp
     game/logic/system/gamelogic.cpp
     game/logic/system/rankinfo.cpp
     game/logic/system/cavesystem.cpp
